- Supports DCDT-306, DCDT-309, DCDT-310 - Refactored classes that are used as predicates, transformers, comparators, etc. to use Java 8 syntax - Upgraded Java dependencies to be compatible with Java 8 such as Java compiler version for Maven, JVM options, code formatter - Upgraded Maven dependencies, including those for Clover, Bouncy Castle, Spring Framework, Spring Security, etc. and Maven plugin versions - Fixed 508-compliance issues (added document language and alt text for logo) - Upgraded versions of JQuery and Bootstrap used for the web front-end